--- a/display.html
+++ b/display.html
@@ -6,9 +6,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-    <script src="detect_from_webcam.js"></script>
+    <script src="detection.js"></script>
+    <style>
+        .viewbox{
+            display: flex;
+            align-items: center;
+            background-color: black;
+        }
+        .camera{
+            flex: 1;
+            padding: 3%;
+        }
+    </style>
 </head>
 <body>
+    <div class="viewbox">
+        <div class="camera" id="content">
 
+        </div>
+    </div>
 </body>
 </html>
