Making display.html look nicer

--- a/display.html
+++ b/display.html
@@ -13,7 +13,6 @@
             margin: 3%;
         }
         .viewbox{
-            display: flex;
             align-content: center;
             justify-content: center;
             background-color: black;
@@ -30,11 +29,9 @@
     </style>
 </head>
 <body>
-    <h1>Object Classification with ml5</h1>
-    <div class="viewbox">
+    <h1>Object Detection (ml5.js)</h1>
         <div class="camera" id="content">
 
         </div>
-    </div>
 </body>
 </html>
